# Bhasha

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
bhasha/: __init__.py  audio.py  cli.py  config.py  evaluation.py  hardware.py  mos.py  report.py  reporting.py  runner.py  schema.py  speaker_metrics.py  text_metrics.py
bhasha/adapters/: _shared.py  base.py  chatterbox.py  dummy.py  external_command.py  hf_vits.py  indic_parler.py  piper_cli.py  registry.py  xtts_v2.py
bhasha/asr/: __init__.py  base.py  faster_whisper_backend.py
bhasha/speaker/: __init__.py  base.py  speechbrain_backend.py
configs/suites/: multilingual_tts_core_v1.json  multilingual_tts_takehome_v1.json  multilingual_tts_takehome_v1.toml  piper_en_smoke.json  smoke_test.json  smoke_test.toml
data/references/: README.md  reference_clips.csv
docs/: benchmark_design.md  kaggle_gpu_runbook.md  kaggle_indic_parler_only_cells.md  milestone_3_asr.md  milestone_4_speaker_similarity.md  milestone_5_mos.md  model_adapters.md
docs/assignment/: candidate_matrix.md  final_local_report.md  local_compute_policy.md
docs/metrics/: asr_round_trip.md  mos.md  speaker_similarity.md
examples/local_cpu/: candidate_matrix.md  compute_policy.md  report.md
requirements/: README.md  chatterbox.txt  external_repos.txt  hf_tts.txt  indic_parler.txt  model_adapters.md  piper.txt  speaker.txt  xtts.txt
samples/multilingual_candidate_dry_run/: README.md  benchmark.csv  (+3 more)
scripts/: download_piper_voice.py
tests/: test_adapter_helpers.py  test_mos.py  test_speaker_metrics.py  test_text_metrics.py
(+4 files in other folders)
